major change in latex code

--- a/exercise00_background_and_characteristics.tex
+++ b/exercise00_background_and_characteristics.tex
@@ -31,6 +31,8 @@
 % \newenvironment{solution}{\begin{comment}}{\end{comment}}
 \newtheorem*{solutioninformation}{Solution Information}
 
+\usepackage{comment}
+% Switch between showing and hiding solutions by commenting out either of the following lines
 \newenvironment{solution}{\begin{mysolution}}{\end{mysolution}}
 % \excludecomment{solution}
 
