--- a/exercise01.tex
+++ b/exercise01.tex
@@ -14,6 +14,7 @@
 \newcommand{\frb}[1]{ \left(  {#1} \right) }
 
 % \usepackage[amsmath,thmmarks,standard]{ntheorem}
+\usepackage{comment}
 \newtheoremstyle{break}
 {\topsep}
 {\topsep}%
@@ -26,13 +27,25 @@
 \theoremstyle{break}
 \newtheorem{exercise}{Exercise}
 \newtheorem*{information}{Information}
-\newtheorem{solution}{Solution}
+\newtheorem{mysolution}{Solution}
+% \newenvironment{solution}{\begin{comment}}{\end{comment}}
 \newtheorem*{solutioninformation}{Solution Information}
+
+\usepackage{comment}
+% Switch between showing and hiding solutions by commenting out either of the following lines
+\newenvironment{solution}{\begin{mysolution}}{\end{mysolution}}
+% \excludecomment{solution}
+
+
+
+
+
 
 \begin{document}
 
 \title{Characteristics and Weak solutions}
 \date{}
+\author{}
 
 \maketitle
 
@@ -52,147 +65,6 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-\begin{exercise}
-    Find the characteristics associated with the transport problem 
-    $$
-        \partial_t u(x,t) + \partial_x\left( (-x) u(x,t) \right) = 0,
-    $$
-    where the speed is $a(x) = -x$.
-    Draw a few examples for these curves. 
-    Solve the characteristic equation for some initial value $u_0$.
-\end{exercise}
-\begin{solution}
-    The characteristic curve starting at $x_0$ obeys the ordinary differential equation 
-    \begin{align*}
-        \partial_t x(t) = - x(t), \quad x(0) = x_0.
-    \end{align*}
-    We know that the solution is 
-    \begin{align*}
-        x(t) = x_0 \exp(-t).
-    \end{align*}
-    As in the lecture, we derive the following ordinary differential equation 
-    for the values of $u$ along the characteristic curve emanating at $x_0$: 
-    \begin{align*}
-        \partial_t v(t) = - \partial_x a( x(t) ) v(t), \quad v(0) = u_0( x(0) ), 
-    \end{align*}
-    that is, 
-    \begin{align*}
-        \partial_t v(t) = x(t) v(t), \quad v(0) = u_0( x(0) ), 
-    \end{align*}
-    We remember (or look up) the solution formula for this ordinary differential equation:
-    \begin{align*}
-        v(t) = u_0(x_0) \cdot e^{\int_0^t x(s) \;ds + x_0}.
-    \end{align*}
-    With our specific formula for $x(t)$, this gives 
-    \begin{align*}
-        v(t) 
-        &
-        = 
-        u_0(x_0) \cdot e^{x_0 \int_0^t \exp(-s) \;ds + x_0}
-        = 
-        u_0(x_0) \cdot e^{ - x_0 e^{-t} + x_0}
-        = 
-        u_0(x_0) \cdot e^{ x_0 ( 1 - e^{-t} ) }
-        .
-    \end{align*}
-    \textit{Remark: 
-    The interpretation of this system is that we have a transport towards the origin.
-    Each characteristic curve goes flat very quickly,
-    since the speed goes to zero as we approach the origin. 
-    }
-\end{solution}
-
-
-
-
-
-\begin{information}
-	A function $u$ is said to be a \emph{weak solution} to the initial value problem (IVP)
-	\begin{gather} \label{conLaw}
-		u_t+f(u)_x=0\ ,
-		\quad
-		u(x,0)=u_0(x)
-	\end{gather}%
-	if for any compactly supported $C^1$ function $\phi=\phi(x,t)$, there holds
-	\begin{gather}%
-		\int_0^\infty \int_{-\infty}^\infty \Big( \phi_t u +\phi_x f(u)\Big)\dif x\dif t
-		=
-		-\int_{-\infty}^\infty \phi(x,0)u_0(x)\dif x\ .
-	\end{gather}%
-\end{information}
-
-
-
-\begin{exercise}
-	Suppose $f\!\left(u\right)=au$, where $a>0$ is a constant and $u_{0}\!\left(x\right)$ is an integrable function. Verify that $u(x)=u_{0}(x-at)$ satisfies \eqref{conLaw} in integral form:
-	\begin{gather} \label{weakForm}
-		\int_{x_{1}}^{x_{2}}u\!\left(x,t_{2}\right) dx
-		-
-		\int_{x_{1}}^{x_{2}}u\!\left(x,t_{1}\right)dx
-		=
-		-
-		\int_{t_{1}}^{t_{2}}f\!\left(u\!\left(x_{2},t\right)\right)dt
-		+
-		\int_{t_{1}}^{t_{2}}f\!\left(u\!\left(x_{1},t\right)\right)dt 
-		\ .
-	\end{gather}%
-\end{exercise}
-
-\begin{solution}
-	The integral form of the scalar conservation law \eqref{conLaw} is given by 
-	\begin{gather} \label{weakForm}
-		\int_{x_{1}}^{x_{2}}u\frb{x,t_{2}} \dif x
-				-\int_{x_{1}}^{x_{2}}u\frb{x,t_{1}} \dif x
-			=-\int_{t_{1}}^{t_{2}}f\frb{u\frb{x_{2},t}} \dif t
-				+\int_{t_{1}}^{t_{2}}f\frb{u\frb{x_{1},t}} \dif t\ .
-	\end{gather}
-	For $f(u)=au$, the conservation law is reduced to the advection equation. Substituting $f\!\left(u\right)=au$ into (\ref{weakForm}) yields
-	\begin{gather} \label{AdvecIntForm}
-		\int_{x_{1}}^{x_{2}}u\frb{x,t_{2}} \dif x
-				-\int_{x_{1}}^{x_{2}}u\frb{x,t_{1}} \dif x
-			=-a \int_{t_{1}}^{t_{2}} u\frb{x_{2},t} \dif t
-				+a\int_{t_{1}}^{t_{2}} u\frb{x_{1},t} \dif t\  .
-	\end{gather}
-	On the left hand side of \eqref{AdvecIntForm} is an integral in $x$, and on the right hand side is an integral in $t$.
-	
-	Let $u_{0}(x)$ be any integrable function, i.e., $u_{0}(x)$ may include discontinuities. If $u(x,t)=u_0(x-at)$, then the left hand side and ride hand side of \eqref{AdvecIntForm} take the form
-	\begin{gather} \label{LHS}
-		LHS=\int_{x_{1}}^{x_{2}}u_{0}\frb{x-at_{2}}\dif x
-				-\int_{x_{1}}^{x_{2}}u_{0}\frb{x-at_{1}} \dif x,
-	\end{gather}
-	\begin{gather} \label{RHS}
-		RHS=-a\int_{t_{1}}^{t_{2}}u_{0}\frb{x_{2}-at}\dif t
-				+a\int_{t_{1}}^{t_{2}}u\frb{x_{1}-at}\dif t\ 
-	\end{gather}
-	respectively. By substituting the integration variable $y=x-at_{2}$ into the first integral of \eqref{LHS}, and the integration variable $y=x-at_{1}$ into the second, we get
-	\begin{gather} \label{LHS2}
-		LHS=\int_{x_{1}-at_{2}}^{x_{2}-at_{2}}u_{0}\frb{y}\dif y
-			-\int_{x_{1}-at_{1}}^{x_{2}-at_{1}}u_{0}\frb{y}\dif y\ .
-	\end{gather}
-	Similarly, by substituting $y=x_{2}-at$ into the first integral of \eqref{RHS}, and $y=x_{1}-at$ in the second we get 
-	\begin{gather} \label{RHS2}
-		RHS=- \int_{x_{2}-at_{2}}^{x_{2}-at_{1}}u_{0}\frb{y}\dif y
-			+\int_{x_{1}-at_{2}}^{x_{1}-at_{1}}u_{0}\frb{y} \dif y\ .
-	\end{gather}
-	Subtracting \eqref{RHS2} from \eqref{LHS2}, we get
-	\begin{gather}
-		LHS-RHS=\int_{x_{1}-at_{2}}^{x_{2}-at_{1}}u_{0}\frb{y} \dif y
-			-\int_{x_{1}-at_{2}}^{x_{2}-at_{1}}u_{0}\frb{y} \dif y=0\ ,
-	\end{gather}
-	from which we conclude that for any integrable function $u_{0}\!\left(x\right)$, $u\!\left(x,t\right)=u_{0}\text{\!}\left(x-at\right)$ is a solution to the advection equation on integral form.
-\end{solution}
-	
 
 \begin{solutioninformation}
 	Before we begin to understand the solutions for the exercises in this problem sheet,
@@ -238,7 +110,13 @@
 \end{solutioninformation}
 
 \begin{exercise}
-	Equation \eqref{conLaw} with $f(u)=u^2/2$ is known as (the inviscid) Burgers equation. Draw the characteristics of the solution in the $x$-$t$ plane, driven by the initial condition
+	The partial differential equation 
+	\begin{gather}
+		u_t+f(u)_x=0\ ,
+		\quad
+		u(x,0)=u_0(x)
+	\end{gather}%
+	with $f(u)=u^2/2$ is known as (the inviscid) Burgers equation. Draw the characteristics of the solution in the $x$-$t$ plane, driven by the initial condition
 	\begin{gather} \label{inCond1}
 		u(x,0)=
 		u_0(x):=\begin{cases}
@@ -304,7 +182,7 @@
 	This implies that the map $\xi\mapsto \hat x\frb{\xi,t}$ is not surjective, and therefore can not be inverted.
 	\begin{figure}
 	\centering
-	\includegraphics{01figures/charac_t}
+	% \includegraphics{01figures/charac_t} TODO: Find the graphics for this or reproduce it (Octave or Matlab, ...)
 	\caption{The characteristic curves (gray lines) in the $x$-$t$ plane and the map $\xi\mapsto \hat x\frb{\xi,t}$.
 			The dashed gray lines are for illustration.}
 	\label{carXTplane}
@@ -336,7 +214,7 @@
 	Figure \ref{u01} shows the solution $u$ at $t=1$, and the initial function $u_0$.
 	\begin{figure}
 	\centering
-	\includegraphics[scale=1]{01figures/usol}
+	% \includegraphics[scale=1]{01figures/usol} TODO: Find the graphics for this or reproduce it (Octave or Matlab, ...)
 	\caption{The solution $u$ at $t=1$ (thick line), and the initial function $u_0$ (thin line).}
 	\label{u01}
 	\end{figure}
@@ -381,7 +259,7 @@
 		B\frb{\phi,u}=-\int_{-\infty}^\infty \phi(x,0)u(x,0)\dif x\ .
 	\end{gather}
 	Let us consider the Riemann problem for the Burgers equation, with the initial condition
-	\begin{gather} \label{Riem}
+	\begin{gather} 
 		u(x,0)=u_0(x)=\begin{cases}
 				u_l & x<0\\
 				u_r & 0<x
@@ -531,17 +409,155 @@
 	which has the solution $\hat u(\xi,t) = u_0(\xi) e^{-t}$. Thus, $u$ is not constant on the characteristics, unless $u_0$ is identically zero.	
 \end{solution}
 
-\begin{solutioninformation}
-		
-	\begin{thebibliography}{----}
-		\bibitem{Evans}
-		\newblock{Partial Differential Equations}, by Lawrence. C. Evans.
-		\newblock{\em Chapter 3, Section 2}.
-		
-		\bibitem{Fritz}
-		\newblock{Partial Differential Equations}, by Fritz John.	
-	\end{thebibliography}
 
-\end{solutioninformation}
+
+
+
+
+
+
+
+\begin{exercise}
+    Find the characteristics associated with the transport problem 
+    $$
+        \partial_t u(x,t) + \partial_x\left( (-x) u(x,t) \right) = 0,
+    $$
+    where the speed is $a(x) = -x$.
+    Draw a few examples for these curves. 
+    Solve the characteristic equation for some initial value $u_0$.
+\end{exercise}
+\begin{solution}
+    The characteristic curve starting at $x_0$ obeys the ordinary differential equation 
+    \begin{align*}
+        \partial_t x(t) = - x(t), \quad x(0) = x_0.
+    \end{align*}
+    We know that the solution is 
+    \begin{align*}
+        x(t) = x_0 \exp(-t).
+    \end{align*}
+    As in the lecture, we derive the following ordinary differential equation 
+    for the values of $u$ along the characteristic curve emanating at $x_0$: 
+    \begin{align*}
+        \partial_t v(t) = - \partial_x a( x(t) ) v(t), \quad v(0) = u_0( x(0) ), 
+    \end{align*}
+    that is, 
+    \begin{align*}
+        \partial_t v(t) = x(t) v(t), \quad v(0) = u_0( x(0) ), 
+    \end{align*}
+    We remember (or look up) the solution formula for this ordinary differential equation:
+    \begin{align*}
+        v(t) = u_0(x_0) \cdot e^{\int_0^t x(s) \;ds + x_0}.
+    \end{align*}
+    With our specific formula for $x(t)$, this gives 
+    \begin{align*}
+        v(t) 
+        &
+        = 
+        u_0(x_0) \cdot e^{x_0 \int_0^t \exp(-s) \;ds + x_0}
+        = 
+        u_0(x_0) \cdot e^{ - x_0 e^{-t} + x_0}
+        = 
+        u_0(x_0) \cdot e^{ x_0 ( 1 - e^{-t} ) }
+        .
+    \end{align*}
+    \textit{Remark: 
+    The interpretation of this system is that we have a transport towards the origin.
+    Each characteristic curve goes flat very quickly,
+    since the speed goes to zero as we approach the origin. 
+    }
+\end{solution}
+
+
+
+
+
+\begin{information}
+	A function $u$ is said to be a \emph{weak solution} to the initial value problem (IVP)
+	\begin{gather} \label{conLaw}
+		u_t+f(u)_x=0\ ,
+		\quad
+		u(x,0)=u_0(x)
+	\end{gather}%
+	if for any compactly supported $C^1$ function $\phi=\phi(x,t)$, there holds
+	\begin{gather}%
+		\int_0^\infty \int_{-\infty}^\infty \Big( \phi_t u +\phi_x f(u)\Big)\dif x\dif t
+		=
+		-\int_{-\infty}^\infty \phi(x,0)u_0(x)\dif x\ .
+	\end{gather}%
+\end{information}
+
+
+
+\begin{exercise}
+	Suppose $f\!\left(u\right)=au$, where $a>0$ is a constant and $u_{0}\!\left(x\right)$ is an integrable function. Verify that $u(x)=u_{0}(x-at)$ satisfies \eqref{conLaw} in integral form:
+	\begin{gather} \label{weakForm}
+		\int_{x_{1}}^{x_{2}}u\!\left(x,t_{2}\right) dx
+		-
+		\int_{x_{1}}^{x_{2}}u\!\left(x,t_{1}\right)dx
+		=
+		-
+		\int_{t_{1}}^{t_{2}}f\!\left(u\!\left(x_{2},t\right)\right)dt
+		+
+		\int_{t_{1}}^{t_{2}}f\!\left(u\!\left(x_{1},t\right)\right)dt 
+		\ .
+	\end{gather}%
+\end{exercise}
+
+\begin{solution}
+	The integral form of the scalar conservation law \eqref{conLaw} is given by 
+	\begin{gather} 
+		\int_{x_{1}}^{x_{2}}u\frb{x,t_{2}} \dif x
+				-\int_{x_{1}}^{x_{2}}u\frb{x,t_{1}} \dif x
+			=-\int_{t_{1}}^{t_{2}}f\frb{u\frb{x_{2},t}} \dif t
+				+\int_{t_{1}}^{t_{2}}f\frb{u\frb{x_{1},t}} \dif t\ .
+	\end{gather}
+	For $f(u)=au$, the conservation law is reduced to the advection equation. Substituting $f\!\left(u\right)=au$ into (\ref{weakForm}) yields
+	\begin{gather} \label{AdvecIntForm}
+		\int_{x_{1}}^{x_{2}}u\frb{x,t_{2}} \dif x
+				-\int_{x_{1}}^{x_{2}}u\frb{x,t_{1}} \dif x
+			=-a \int_{t_{1}}^{t_{2}} u\frb{x_{2},t} \dif t
+				+a\int_{t_{1}}^{t_{2}} u\frb{x_{1},t} \dif t\  .
+	\end{gather}
+	On the left hand side of \eqref{AdvecIntForm} is an integral in $x$, and on the right hand side is an integral in $t$.
+	
+	Let $u_{0}(x)$ be any integrable function, i.e., $u_{0}(x)$ may include discontinuities. If $u(x,t)=u_0(x-at)$, then the left hand side and ride hand side of \eqref{AdvecIntForm} take the form
+	\begin{gather} \label{LHS}
+		LHS=\int_{x_{1}}^{x_{2}}u_{0}\frb{x-at_{2}}\dif x
+				-\int_{x_{1}}^{x_{2}}u_{0}\frb{x-at_{1}} \dif x,
+	\end{gather}
+	\begin{gather} \label{RHS}
+		RHS=-a\int_{t_{1}}^{t_{2}}u_{0}\frb{x_{2}-at}\dif t
+				+a\int_{t_{1}}^{t_{2}}u\frb{x_{1}-at}\dif t\ 
+	\end{gather}
+	respectively. By substituting the integration variable $y=x-at_{2}$ into the first integral of \eqref{LHS}, and the integration variable $y=x-at_{1}$ into the second, we get
+	\begin{gather} \label{LHS2}
+		LHS=\int_{x_{1}-at_{2}}^{x_{2}-at_{2}}u_{0}\frb{y}\dif y
+			-\int_{x_{1}-at_{1}}^{x_{2}-at_{1}}u_{0}\frb{y}\dif y\ .
+	\end{gather}
+	Similarly, by substituting $y=x_{2}-at$ into the first integral of \eqref{RHS}, and $y=x_{1}-at$ in the second we get 
+	\begin{gather} \label{RHS2}
+		RHS=- \int_{x_{2}-at_{2}}^{x_{2}-at_{1}}u_{0}\frb{y}\dif y
+			+\int_{x_{1}-at_{2}}^{x_{1}-at_{1}}u_{0}\frb{y} \dif y\ .
+	\end{gather}
+	Subtracting \eqref{RHS2} from \eqref{LHS2}, we get
+	\begin{gather}
+		LHS-RHS=\int_{x_{1}-at_{2}}^{x_{2}-at_{1}}u_{0}\frb{y} \dif y
+			-\int_{x_{1}-at_{2}}^{x_{2}-at_{1}}u_{0}\frb{y} \dif y=0\ ,
+	\end{gather}
+	from which we conclude that for any integrable function $u_{0}\!\left(x\right)$, $u\!\left(x,t\right)=u_{0}\text{\!}\left(x-at\right)$ is a solution to the advection equation on integral form.
+\end{solution}
+	
+
+
+
+\begin{thebibliography}{----}
+	\bibitem{Evans}
+	\newblock{Partial Differential Equations}, by Lawrence. C. Evans.
+	\newblock{\em Chapter 3, Section 2}.
+	
+	\bibitem{Fritz}
+	\newblock{Partial Differential Equations}, by Fritz John.	
+\end{thebibliography}
+
 
 \end{document}
