--- a/exercise03.tex
+++ b/exercise03.tex
@@ -26,8 +26,20 @@
 \theoremstyle{break}
 \newtheorem{exercise}{Exercise}
 \newtheorem*{information}{Information}
-\newtheorem{solution}{Solution}
+\newtheorem{mysolution}{Solution}
+% \newenvironment{solution}{\begin{comment}}{\end{comment}}
 \newtheorem*{solutioninformation}{Solution Information}
+
+\usepackage{comment}
+% Switch between showing and hiding solutions by commenting out either of the following lines
+\newenvironment{solution}{\begin{mysolution}}{\end{mysolution}}
+% \excludecomment{solution}
+
+
+
+
+
+
 
 
 
@@ -258,15 +270,15 @@
 		\end{cases}\ .
 	\end{equation}
 
-	\input{Exc1.tikz}
+	% \input{Exc1.tikz} TODO: Find the graphics for this or reproduce it (Octave or Matlab, Tikz, ...)
 	\begin{figure}[H]
 	\center 
 
-	\subfloat[\label{fig:Exc1_3a_U}]{\input{Exc1_3a_U.tikz}
+	% \subfloat[\label{fig:Exc1_3a_U}]{\input{Exc1_3a_U.tikz}} TODO: Find the graphics for this or reproduce it (Octave or Matlab, ...)
 
-	}\hspace{10mm}\subfloat[\label{fig:Exc1_3a_C}]{\input{Exc1_3a_C.tikz}
-
-	}
+	\hspace{10mm}
+	
+	%\subfloat[\label{fig:Exc1_3a_C}]{\input{Exc1_3a_C.tikz}} TODO: Find the graphics for this or reproduce it (Octave or Matlab, ...)
 
 	\caption{\label{fig:Exc1_3a} Exercise 3.1a. Initial data $u_0$ given by \label{InCond1}, applied to the inviscid burgers equation. The two shocks move towards each other and merge at $x=0$. At $x=0$ they form a new stationary shock.
 	\quad{(a)}~ Initial data. \quad{(b)}~Characteristics. }
@@ -276,11 +288,9 @@
 	\begin{figure}[H] 
 	\center 
 
-	\subfloat[\label{fig:Exc1_3b_U}]{\input{Exc1_3b_U.tikz}
-
-	}\hspace{10mm}\subfloat[\label{fig:Exc1_3b_C}]{\input{Exc1_3b_C.tikz}
-
-	}
+% 	\subfloat[\label{fig:Exc1_3b_U}]{\input{Exc1_3b_U.tikz}} TODO: Find the graphics for this or reproduce it (Octave or Matlab, ...)
+	\hspace{10mm}
+% 	\subfloat[\label{fig:Exc1_3b_C}]{\input{Exc1_3b_C.tikz}} TODO: Find the graphics for this or reproduce it (Octave or Matlab, ...)
 
 	\caption{\label{fig:Exc1_3b} Exercise 3.1b. Initial data $u_0$, given by \label{InCond2}, applied to the inviscid burgers equation. The two rarefaction waves move away from each other with equal speed and never merge. \quad{(a)} Initial data. \quad{(b)} Characteristics. }
 
@@ -289,11 +299,9 @@
 	\begin{figure}[H]
 	\center 
 
-	\subfloat[\label{fig:Exc1_4_U}]{\input{Exc1_4_U.tikz}
-
-	}\hspace{10mm}\subfloat[\label{fig:Exc1_4_C}]{\input{Exc1_4_C.tikz}
-
-	}
+% 	\subfloat[\label{fig:Exc1_4_U}]{\input{Exc1_4_U.tikz}} TODO: Find the graphics for this or reproduce it (Octave or Matlab, ...)
+	\hspace{10mm}
+% 	\subfloat[\label{fig:Exc1_4_C}]{\input{Exc1_4_C.tikz}} TODO: Find the graphics for this or reproduce it (Octave or Matlab, ...)
 
 	\caption{\label{fig:Exc1_4} Exercise 3.2. Initial data $u_0$, given by \label{inCond3}, applied to the inviscid burgers equation. The rarefaction wave and the shock both move in the positive direction. The rarefaction wave moves faster than the shock and at some point in time $t=T_c>0$ they meet. \quad{(a)} Initial data. \quad{(b)} Characteristics. }
 	\end{figure}
@@ -1518,13 +1526,13 @@
     	\end{cases}\ .
     \end{equation}
     
-    \input{Exc1.tikz}
+    % \input{Exc1.tikz} TODO: Find the graphics for this or reproduce it (Octave or Matlab, ...)
     \begin{figure}[H]
     \center 
     
-    \subfloat[\label{fig:Exc1_3a_U}]{\input{Exc1_3a_U.tikz}}
+%     \subfloat[\label{fig:Exc1_3a_U}]{\input{Exc1_3a_U.tikz}} TODO: Find the graphics for this or reproduce it (Octave or Matlab, ...)
     \hspace{10mm}
-    \subfloat[\label{fig:Exc1_3a_C}]{\input{Exc1_3a_C.tikz}}
+%     \subfloat[\label{fig:Exc1_3a_C}]{\input{Exc1_3a_C.tikz}} TODO: Find the graphics for this or reproduce it (Octave or Matlab, ...)
     
     \caption{\label{fig:Exc1_3a} Exercise 3.1a. Initial data $u_0$ given by \label{InCond1}, applied to the inviscid burgers equation. The two shocks move towards each other and merge at $x=0$. At $x=0$ they form a new stationary shock.
     \quad{(a)}~ Initial data. \quad{(b)}~Characteristics. }
@@ -1534,9 +1542,9 @@
     \begin{figure}[H] 
     \center 
     
-    \subfloat[\label{fig:Exc1_3b_U}]{\input{Exc1_3b_U.tikz}}
+%     \subfloat[\label{fig:Exc1_3b_U}]{\input{Exc1_3b_U.tikz}} TODO: Find the graphics for this or reproduce it (Octave or Matlab, ...)
     \hspace{10mm}
-    \subfloat[\label{fig:Exc1_3b_C}]{\input{Exc1_3b_C.tikz}}
+%     \subfloat[\label{fig:Exc1_3b_C}]{\input{Exc1_3b_C.tikz}} TODO: Find the graphics for this or reproduce it (Octave or Matlab, ...)
     
     \caption{\label{fig:Exc1_3b} Exercise 3.1b. Initial data $u_0$, given by \label{InCond2}, applied to the inviscid burgers equation. The two rarefaction waves move away from each other with equal speed and never merge. \quad{(a)} Initial data. \quad{(b)} Characteristics. }
     
@@ -1545,9 +1553,9 @@
     \begin{figure}[H]
     \center 
     
-    \subfloat[\label{fig:Exc1_4_U}]{\input{Exc1_4_U.tikz}}
+%     \subfloat[\label{fig:Exc1_4_U}]{\input{Exc1_4_U.tikz}} TODO: Find the graphics for this or reproduce it (Octave or Matlab, ...)
     \hspace{10mm}
-    \subfloat[\label{fig:Exc1_4_C}]{\input{Exc1_4_C.tikz}}
+%     \subfloat[\label{fig:Exc1_4_C}]{\input{Exc1_4_C.tikz}} TODO: Find the graphics for this or reproduce it (Octave or Matlab, ...)
     
     \caption{\label{fig:Exc1_4} Exercise 3.2. Initial data $u_0$, given by \label{inCond3}, applied to the inviscid burgers equation. The rarefaction wave and the shock both move in the positive direction. The rarefaction wave moves faster than the shock and at some point in time $t=T_c>0$ they meet. \quad{(a)} Initial data. \quad{(b)} Characteristics. }
     \end{figure}
